--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ body{
 
 .section{
     background: url(./assets/images/bg-mobile-light.jpg) no-repeat;
-    background-size: 100% 30%;
+    background-size: 100% 250px;
 }
 
 .article{
@@ -116,6 +116,7 @@ body{
 }
 
 .todo-container{
+    position: relative;
     width: inherit;
     margin-top: 1em;
     border-radius: .3em;
@@ -127,11 +128,6 @@ body{
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-.todo-list-counter{
-    display: flex;
-    justify-content: space-between;
 }
 
 .todo-list-item{
@@ -148,10 +144,13 @@ body{
 }
 
 .todo-list-counter{
-    padding: 1.5em 1em .5em 1em;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.7em 1em;
+    list-style: none;
 }
 
-.todo-list-counter span{
+.todo-list-counter li{
     font-size: 1rem;
     color: var(--dark-grayish-blue);
 }
@@ -187,5 +186,74 @@ body{
     border: none;
     outline: none;
     background: none;
+}
+
+.clear-btn{
+    cursor: pointer;
+}
+
+.clear-btn:hover{
+    color: var(--very-dark-grayish-blue)
+}
+
+.todo-status{
+    position: absolute;
+    top: 510px;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 75px;
+    width: 100%;
+    padding: 0;
+    box-shadow: 2px 2px 5px rgb(100, 99, 99);
+    font-size: 1rem;
+    font-weight: 600;
+    list-style: none;
+}
+
+.todo-status{
+    text-decoration: none;
+    color: var(--dark-grayish-blue);
+}
+
+.radio-btn{
+    appearance: none;
+}
+
+.label-text{
+    cursor: pointer;
+}
+
+.radio-btn:checked + .label-text{
+    color: var(--bright-blue);
+}
+
+.label-text:hover{
+    color: var(--very-dark-blue);
+}
+
+@media screen and (min-width: 768px) {
+    .section{
+        background: url(./assets/images/bg-desktop-light.jpg) no-repeat;
+        background-size: 100% 260px;
+    }
+
+    .todo-list-counter{
+        display: grid;
+        grid-template-columns: 81px 225px 123px;
+        justify-content: space-between;
+        padding: 1.2em;
+    }
+
+    .todo-status{
+        all: unset;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .label-text{
+        font-weight: 600;
+    }
 }
 
