--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 html, body, #root, .section-light, .section{
-    overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
 }
@@ -158,7 +158,7 @@ body{
 .todo-list-status{
     display: flex;
     justify-content: space-between;
-    padding: 1.7em 1em;
+    padding: .5em 1em;
     list-style: none;
 }
 
@@ -201,7 +201,13 @@ body{
 }
 
 .clear-btn{
-    cursor: pointer;
+    border: none;
+    background: none;
+    cursor: pointer;    
+    font-family: var(--font-josefin-sans);
+    font-size: 1rem;
+    padding: 0;
+    color: var(--span-and-status);
 }
 
 .clear-btn:hover{
@@ -210,13 +216,13 @@ body{
 
 .todo-status{
     position: absolute;
-    top: 510px;
     left: 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 60px;
     width: 100%;
+    margin-top: 70px;
     padding: 0;
     box-shadow: var(--box-shadow);
     font-size: 1rem;
@@ -253,7 +259,8 @@ body{
         display: grid;
         grid-template-columns: 100px 225px 123px;
         justify-content: space-between;
-        padding: 1.2em;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
     }
 
     .todo-status{
