--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ html, body, #root, .section-light, .section{
 
 body{
     font-size: 18px;
-    font-family: var(--font-josefin-sans)
+    font-family: var(--font-josefin-sans);
 }
 
 .section{
@@ -105,10 +105,13 @@ body{
     height: 25px;
     border: 1px solid var(--border-color);
     border-radius: 50%;
+    box-sizing: border-box;  
+
 }
 
 .form-span{
-    font-size: .9rem;
+    font-size: 1rem;
+    min-width: 15ch;
     margin-top: .2em;
     margin-left: 1em;
     color: var(--span-and-status);
